# SchoolReminder

./: .gitignore  Dockerfile  LICENSE.txt  bot_run.sh  pyproject.toml
src/app/: bot_logging.py  config.py  main.py  service.py
