[build-system]
requires = ["setuptools>=61.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "schoolreminder"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.5.2",
    "python-dotenv>=1.0.1"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
schoolreminder = "app.main:main"
